Fix right margin on narrow window

--- a/public/theme/portalshit/styles/_mixin.scss
+++ b/public/theme/portalshit/styles/_mixin.scss
@@ -195,6 +195,7 @@
       display: flex;
       justify-content: space-between;
       margin: .8em 0;
+      max-width: calc(100% - 1em);
 
       .link {
         display: -webkit-box;
